--- a/assets/views/login.twig
+++ b/assets/views/login.twig
@@ -20,13 +20,17 @@
 			z-index: 1;
 			display: block;
 		}
+
+		body {
+			background: #444;
+		}
 	</style>
 
 </head>
 
 <body>
 
-<form action="/login" method="post">
+<form action="{{ path('/login') }}" method="post">
 	<div class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
@@ -50,8 +54,8 @@
 						<input class="form-control" type="password" id="inputPassword" placeholder="Password" name="pass">
 					</div>
 					<div class="form-group form-check">
-						<input class="form-control" type="checkbox" id="inputRelogin" name="relogin">
-						<label class="checkbox" for="inputRelogin"> Remember login</label>
+						<input class="form-check-input" type="checkbox" id="inputRelogin" name="relogin">
+						<label class="form-check-label" for="inputRelogin"> Remember login</label>
 					</div>
 				</div>
 
