--- a/assets/views/registration.twig
+++ b/assets/views/registration.twig
@@ -20,12 +20,16 @@
 			z-index: 1;
 			display: block;
 		}
+
+		body {
+			background: #444;
+		}
 	</style>
 </head>
 
 <body>
 
-<form action="/register" method="post">
+<form action="{{ path('/register') }}" method="post">
 	<div class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
